# ops-solver

./: .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.sh
cmake/: makeself.cmake  package.cmake  version.cmake
docs/: QUICKSTART.md  api_list.md  cmatinv_batched.md  op_list.md  从开发一个简单算子出发.md
docs/zh/: cgetrf.md  cgetri.md  cgetri_batched.md  cmatinv_batched.md  sgetrf.md  sgetri.md
docs/zh/install/: dir_structure.md  quick_install.md
include/: cann_ops_solver.h  cann_ops_solver_common.h
scripts/: oat_check.sh
scripts/package/: help.info  install.sh
solver/cgetri_batched/: cgetri_batched_host.cpp  cgetri_batched_kernel.cpp
solver/cgetri_batched/kernel/: getf2.hpp  getri_custom.hpp  lu_custom.hpp  trsm.hpp  trsm_custom.hpp  trsm_upper_custom.hpp
solver/cmatinv_batched/: cmatinv_batched_host.cpp  cmatinv_batched_kernel.cpp
src/: CMakeLists.txt
src/cgetrf/: cgetrf_host.cpp  cgetrf_kernel.cpp
src/cgetrf/kernel/: getf2.hpp
src/cgetri/: cgetri_host.cpp  cgetri_kernel.cpp
src/cgetri_batched/: cgetri_batched_host.cpp  cgetri_batched_kernel.cpp
src/cmatinv_batched/: cmatinv_batched_host.cpp
src/sgetrf/: sgetrf_host.cpp  sgetrf_kernel.cpp
src/sgetrf/kernel/: getf2.hpp
src/sgetri/: sgetri_host.cpp  sgetri_kernel.cpp
src/utils/: aclsolver_auxiliary.cpp  aclsolver_handle_internal.h  assert.h
src/utils/kernel/c32/: gemm.hpp  getf2.hpp  lu_custom.hpp  pad.hpp  trsm.hpp  trsm_custom.hpp  trsm_upper_custom.hpp
src/utils/kernel/c64/: cast.hpp  gemm.hpp  lu_custom.hpp  pad.hpp  trsm.hpp  trsm_custom.hpp  trsm_upper_custom.hpp
test/: CMakeLists.txt
test/cgetrf/: CMakeLists.txt  README.md  cgetrf_test.cpp
test/cgetrf/data/: gen_data.py  verify_result.py
test/cgetri/: CMakeLists.txt  README.md  cgetri_test.cpp
test/cgetri/data/: gen_data.py  verify_result.py
test/cgetri_batched/: CMakeLists.txt  README.md  cgetri_batched_test.cpp
test/cgetri_batched/data/: gen_data.py  verify_result.py
test/cmatinv_batched/: CMakeLists.txt  README.md  cmatinv_batched_test.cpp
test/cmatinv_batched/data/: gen_data.py  verify_result.py
test/sgetrf/: CMakeLists.txt  README.md  sgetrf_test.cpp
test/sgetrf/data/: gen_data.py  verify_result.py
test/sgetri/: CMakeLists.txt  README.md  sgetri_test.cpp
test/sgetri/data/: gen_data.py  verify_result.py
test/utils/: data_utils.h  test_utils.h  utils.h
